--- a/dashboard.html
+++ b/dashboard.html
@@ -12,65 +12,77 @@
 
 <body>
   <section class="is-fullwidth">
+
    <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-     <a class="navbar-item" href="https://bulma.io"><img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"></a>
-     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-     </a>
+     <a class="navbar-item brand-text" href="../">Bulma Admin</a>
+     <div class="navbar-burger burger " data-target="navMenu">
+      <span></span>
+      <span></span>
+      <span></span>
+     </div>
     </div>
-    
-    <div id="navbarBasicExample" class="navbar-menu">
+
+    <div id="navMenu" class="navbar-menu" style="position:absolute;width: 100%">
      <div class="navbar-start">
-      <a class="navbar-item">Home</a>
-      <a class="navbar-item">Makanan</a>
-     </div>
-     <div class="navbar-end">
-      <div class="navbar-item">
-       <div class="buttons">
-        <a class="button is-danger">Log Out</a>
-       </div>
-      </div>
+      <a class="navbar-item" href="">Home</a>
+      <a class="navbar-item" href="">Makanan</a>
      </div>
     </div>
+
    </nav>
+
   </section>
+
   <div class="container">
+
    <div class="columns">
+
     <div class="column is-2">
      <aside class="sidebar menu is-hidden-mobile is-uppercase has-text-weight-bold ">
       <div class="avatar has-text-centered">
        <figure class="img-avatar">
         <img src="assets/img/avatar.png" alt="">
        </figure>
-       <div class="id-admin">
-        Id_Penjual
-       </div>
+       <div class="id-admin">Id_Penjual</div>
       </div>
-      <p class="menu-label">
-       General
-      </p>
+      <hr>
+      <p class="menu-label">General</p>
       <ul class="menu-list">
-       <li>Profil</li>
+       <li><a href="">Edit Profil</a></li>
       </ul>
-      <p class="menu-label">
-       Transaction
-      </p>
+      <p class="menu-label">Transaction</p>
       <ul class="menu-list">
-       <li>Profil</li>
+       <li><a href="">Riwayat</a></li>
       </ul>
 
      </aside>
     </div>
 
     <div class="column is-9">
-     
+
+     <div class="box content">
+      <div class="pesanan">
+       <table style="100%">
+        <thead>
+         <tr><th>#</th><th>Pesanan</th><th>Jumlah</th><th>Meja</th><th>Aksi</th></tr>
+        </thead>
+        <tbody>
+         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+        </tbody>
+       </table>
+      </div>
+     </div>
+
     </div>
 
    </div>
   </div>
 </body>
+
+<script src="assets/js/bulma.js"></script>
 
 </html>
