--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,9 @@
 
    <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-     <a class="navbar-item brand-text" href="../">Bulma Admin</a>
+     <a class="navbar-item brand-text" href="../">
+      <img src="assets/img/logo.png" alt="" srcset="">
+     </a>
      <div class="navbar-burger burger " data-target="navMenu">
       <span></span>
       <span></span>
@@ -23,10 +25,17 @@
      </div>
     </div>
 
-    <div id="navMenu" class="navbar-menu" style="position:absolute;width: 100%">
+    <div id="navMenu" class="navbar-menu">
      <div class="navbar-start">
-      <a class="navbar-item" href="">Home</a>
-      <a class="navbar-item" href="">Makanan</a>
+      <div class="navbar-item">
+       <a class="navbar-item" href="">Home</a>
+       <a class="navbar-item" href="">Makanan</a>
+      </div>
+     </div>
+     <div class="navbar-end">
+      <div class="navbar-item">
+       <a class="button is-danger" href="">Logout</a>
+      </div>
      </div>
     </div>
 
@@ -59,9 +68,9 @@
      </aside>
     </div>
 
-    <div class="column is-9">
+    <div class="column is-10">
 
-     <div class="box content">
+     <div class="box content is-fullwidth">
       <div class="pesanan">
        <table style="100%">
         <thead>
