--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
 
   <div class="container">
 
-   <div class="columns">
+   <div class="columns is-marginless">
 
     <div class="column is-2">
      <aside class="sidebar menu is-hidden-mobile is-uppercase has-text-weight-bold ">
