--- a/login-pembeli.html
+++ b/login-pembeli.html
@@ -16,7 +16,7 @@
   <div class="">
    <div class="container has-text-centered">
 
-    <div class="column is-4 is-offset-4">
+    <div class="column is-4 is-offset-4 is-marginless">
      
      <div style="padding:25px">
       <img src="assets/img/logo.png" alt="">
