--- a/dashboard.html
+++ b/dashboard.html
@@ -78,9 +78,9 @@
         </thead>
         <tbody>
          <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
-         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
-         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
-         <tr><td>1</td><td>Tahu Kupat</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+         <tr><td>2</td><td>Mie Ayam</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+         <tr><td>3</td><td>Good Day</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
+         <tr><td>4</td><td>Mie Dok Dok</td><td>10</td><td>5</td><td><button class="button is-small is-success"><i class="fas fa-check"></i></button></td></tr>
         </tbody>
        </table>
       </div>
