--- a/login-pembeli.html
+++ b/login-pembeli.html
@@ -13,10 +13,10 @@
 <body>
  <section class="section hero is-light is-fullheight">
 
-  <div class="">
+  <div class="hero-body is-paddingless">
    <div class="container has-text-centered">
 
-    <div class="column is-4 is-offset-4 is-marginless">
+    <div class="column is-4 is-offset-4">
      
      <div style="padding:25px">
       <img src="assets/img/logo.png" alt="">
